@@ -1,3 +1,12 @@
+Thu Mar 18 07:59:37 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+	* TAO_IDL/Makefile.am:
+	  Removed obsolete files
+
+	* TAO_IDL/be/be_visitor_operation/operation_sh.cpp:
+	* TAO_IDL/be/be_visitor_interface/interface_sh.cpp
+	  Changed layout of generated code
+
 Wed Mar 17 19:10:37 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_ami4ccm_pre_proc.cpp:
